# UnifiedImageReader

./: ImageReader.py  LICENSE  README.md  TiffAdapter.py  UnifiedImageReader.py  VIPS.py  environment.yml  image_reader.py  setup.cfg  setup.py  test-image.svs  test-notebook.ipynb  test.tiff
.devcontainer/: Dockerfile  devcontainer.json
Adapters/: SLIDEIO.py  VIPS.py
src/unified_image_reader/: __init__.py  config.py  image.py  image_reader.py  util.py
src/unified_image_reader/adapters/: __init__.py  adapter.py  config.py  slideio.py  vips.py
unified_image_reader/: __init__.py  image_reader.py  unified_image_reader.py
